force-app/main/default/objects/HelloAsso_Sync_Settings__mdt/HelloAsso_Sync_Settings__mdt.object-meta.xml
<CustomObject>
    <label>HelloAsso Sync Settings</label>
    <pluralLabel>HelloAsso Sync Settings</pluralLabel>
</CustomObject>