force-app/main/default/objects/HelloAsso_Sync_Settings__mdt/fields/days_delta__c.field-meta.xml
<CustomField>
    <fullName>days_delta__c</fullName>
    <label>Days Delta</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>