force-app/main/default/objects/HelloAsso_Sync_Settings__mdt/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <label>Email de notification</label>
    <type>Email</type>
</CustomField>