force-app/main/default/objects/HelloAsso_Sync_Settings__mdt/fields/helloasso_orgid__c.field-meta.xml
<CustomField>
    <fullName>helloasso_orgid__c</fullName>
    <label>helloasso_orgid</label>
    <length>32</length>
    <type>Text</type>
</CustomField>