force-app/main/default/objects/HelloAsso_Sync_Settings__mdt/fields/Payment_Method_SEPA__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_SEPA__c</fullName>
    <label>Payment_Method_SEPA</label>
    <length>32</length>
    <type>Text</type>
</CustomField>