force-app/main/default/objects/HelloAsso_Sync_Settings__mdt/fields/Payment_Platform__c.field-meta.xml
<CustomField>
    <fullName>Payment_Platform__c</fullName>
    <label>Payment_Platform</label>
    <length>32</length>
    <type>Text</type>
</CustomField>